--- a/app/src/main/res/layout/my_litle_img.xml
+++ b/app/src/main/res/layout/my_litle_img.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/tv_title"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
